--- a/index.html
+++ b/index.html
@@ -10,9 +10,54 @@
 </head>
 
 <body>
+
+    <header class="container">
+        <div class="header-top">
+            <div class="header-top__left">
+                <div class="header-top__location">
+                    <div class="location-info">
+                        <img src="img/icon/manzil.svg" alt="Manzil">
+                        <span>Shahar: </span>
+                        <a href="#!">Toshkent</a>
+                    </div>
+                    <a href="#!" class="pickup-link">Topshirish punktlari</a>
+                </div>
+
+                <div class="header-top__delivery">
+                    <p>Buyurtmangizni 1 kunda bepul yetkazib beramiz!</p>
+                </div>
+
+                <div class="header-top__links">
+                    <div class="faq-box">
+                        <a href="#!" class="faq-link">Savol-javoblar</a>
+                        <a href="#!" class="orders-link">Buyurtmalarim</a>
+                    </div>
+                    <div class="header-top__right">
+                        <a href="#!" class="lang-flag">
+                            <img src="img/icon/flag.svg" alt="Bayroq">
+                        </a>
+                        <p class="lang-text">Oʻzbekcha</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+
     <section class="product-section">
         <div id="product-card">
-            <!-- <div class="product">
+            <div class="product">
                 <div class="product-header">
                     <div class="product-image">
                         <img src="img/t_product_540_high.jpg.png" alt="product">
@@ -39,7 +84,91 @@
                         <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
                     </div>
                 </div>
-            </div> -->
+            </div>
+            <div class="product">
+                <div class="product-header">
+                    <div class="product-image">
+                        <img src="img/t_product_540_high.jpg.png" alt="product">
+                    </div>
+                    <button class="btn">
+                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
+                    </button>
+                    <span class="product-badge">Eksklyuziv</span>
+                </div>
+                <div class="product-body">
+                    <div class="product-info">
+                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
+                        <div class="product-rating">
+                            <img src="img/icon/Vector.svg" alt="star">
+                            <span>4.9 (4092 sharsh)</span>
+                        </div>
+                        <b class="product-monthly">1 560 so'm/oyiga</b>
+                    </div>
+                    <div class="product-footer">
+                        <div class="product-price">
+                            <span class="old-price">15 000 so'm</span>
+                            <b class="new-price">13 000 so'm</b>
+                        </div>
+                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-header">
+                    <div class="product-image">
+                        <img src="img/t_product_540_high.jpg.png" alt="product">
+                    </div>
+                    <button class="btn">
+                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
+                    </button>
+                    <span class="product-badge">Eksklyuziv</span>
+                </div>
+                <div class="product-body">
+                    <div class="product-info">
+                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
+                        <div class="product-rating">
+                            <img src="img/icon/Vector.svg" alt="star">
+                            <span>4.9 (4092 sharsh)</span>
+                        </div>
+                        <b class="product-monthly">1 560 so'm/oyiga</b>
+                    </div>
+                    <div class="product-footer">
+                        <div class="product-price">
+                            <span class="old-price">15 000 so'm</span>
+                            <b class="new-price">13 000 so'm</b>
+                        </div>
+                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-header">
+                    <div class="product-image">
+                        <img src="img/t_product_540_high.jpg.png" alt="product">
+                    </div>
+                    <button class="btn">
+                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
+                    </button>
+                    <span class="product-badge">Eksklyuziv</span>
+                </div>
+                <div class="product-body">
+                    <div class="product-info">
+                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
+                        <div class="product-rating">
+                            <img src="img/icon/Vector.svg" alt="star">
+                            <span>4.9 (4092 sharsh)</span>
+                        </div>
+                        <b class="product-monthly">1 560 so'm/oyiga</b>
+                    </div>
+                    <div class="product-footer">
+                        <div class="product-price">
+                            <span class="old-price">15 000 so'm</span>
+                            <b class="new-price">13 000 so'm</b>
+                        </div>
+                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
