--- a/index.html
+++ b/index.html
@@ -1,178 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzum Market</title>
-    <link rel="stylesheet" href="font/transfonter.org-20250924-085357/stylesheet.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="font/transfonter.org-20250924-085357/stylesheet.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-
-    <header class="container">
-        <div class="header-top">
-            <div class="header-top__left">
-                <div class="header-top__location">
-                    <div class="location-info">
-                        <img src="img/icon/manzil.svg" alt="Manzil">
-                        <span>Shahar: </span>
-                        <a href="#!">Toshkent</a>
-                    </div>
-                    <a href="#!" class="pickup-link">Topshirish punktlari</a>
-                </div>
-
-                <div class="header-top__delivery">
-                    <p>Buyurtmangizni 1 kunda bepul yetkazib beramiz!</p>
-                </div>
-
-                <div class="header-top__links">
-                    <div class="faq-box">
-                        <a href="#!" class="faq-link">Savol-javoblar</a>
-                        <a href="#!" class="orders-link">Buyurtmalarim</a>
-                    </div>
-                    <div class="header-top__right">
-                        <a href="#!" class="lang-flag">
-                            <img src="img/icon/flag.svg" alt="Bayroq">
-                        </a>
-                        <p class="lang-text">Oʻzbekcha</p>
-                    </div>
-                </div>
+  <body>
+    <header class="header">
+      <div class="header-top">
+        <div class="header-top__left">
+          <div class="header-top__location">
+            <div class="location-info">
+              <img src="img/icon/manzil.svg" alt="Manzil" />
+              <span>Shahar: </span>
+              <a href="#!">Toshkent</a>
             </div>
+            <a href="#!" class="pickup-link">Topshirish punktlari</a>
+          </div>
+
+          <div class="header-top__delivery">
+            <p>Buyurtmangizni 1 kunda bepul yetkazib beramiz!</p>
+          </div>
+
+          <div class="header-top__links">
+            <div class="faq-box">
+              <a href="#!" class="faq-link">Savol-javoblar</a>
+              <a href="#!" class="orders-link">Buyurtmalarim</a>
+            </div>
+            <div class="header-top__right">
+              <a href="#!" class="lang-flag">
+                <img src="img/icon/flag.svg" alt="Bayroq" />
+              </a>
+              <p class="lang-text">Oʻzbekcha</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pastki header -->
+      <div class="header-bottom">
+        <div class="header-bottom__top">
+          <div class="header-bottom__left">
+            <div class="logo">
+              <img
+                src="img/uzum_market-logo.png"
+                alt="Uzum Market logotipi"
+                width="247"
+                height="32"
+              />
+            </div>
+
+            <div class="search-section">
+              <button class="catalog-btn">
+                <img src="img/icon/catalog.svg" alt="" />
+                Katalog
+              </button>
+              <div class="search-box">
+                <input
+                  type="text"
+                  placeholder="Mahsulotlar va turkumlar izlash"
+                  />
+                  <button class="search-btn">
+                    <img src="img/icon/search.svg" alt="Izlash" />
+                  </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="header-bottom__right">
+            <a href="#!" class="login">
+              <img src="img/icon/human.svg" alt="" />
+              Kirish
+            </a>
+            <a href="#!" class="favorites">
+              <img src="img/icon/hart.svg" alt="" />
+              Saralangan
+            </a>
+            <a href="#!" class="cart">
+              <img src="img/icon/shop.svg" alt="" />
+              Savat
+            </a>
+          </div>
         </div>
 
-
-
-
-
-
-
-
-        <div>
-            <div></div>
-            <div></div>
-        </div>
+        <nav class="header-bottom__nav">
+          <a href="#!">Muddatli to‘lov</a>
+          <a href="#!">Elektronika</a>
+          <a href="#!">Maishiy texnika</a>
+          <a href="#!">Kiyim</a>
+          <a href="#!">Poyabzallar</a>
+          <a href="#!">Aksessuarlar</a>
+          <a href="#!">Go‘zallik va parvarish</a>
+          <a href="#!">Salomatlik</a>
+          <a href="#!">Uy-ro‘zg‘or buyumlari</a>
+          <a href="#!">Qurilish va ta’mirlash</a>
+          <a href="#!">Yana</a>
+        </nav>
+      </div>
     </header>
 
     <section class="product-section">
-        <div id="product-card">
-            <div class="product">
-                <div class="product-header">
-                    <div class="product-image">
-                        <img src="img/t_product_540_high.jpg.png" alt="product">
-                    </div>
-                    <button class="btn">
-                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
-                    </button>
-                    <span class="product-badge">Eksklyuziv</span>
-                </div>
-                <div class="product-body">
-                    <div class="product-info">
-                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
-                        <div class="product-rating">
-                            <img src="img/icon/Vector.svg" alt="star">
-                            <span>4.9 (4092 sharsh)</span>
-                        </div>
-                        <b class="product-monthly">1 560 so'm/oyiga</b>
-                    </div>
-                    <div class="product-footer">
-                        <div class="product-price">
-                            <span class="old-price">15 000 so'm</span>
-                            <b class="new-price">13 000 so'm</b>
-                        </div>
-                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
-                    </div>
-                </div>
+      <div id="product-card">
+        <div class="product">
+          <div class="product-header">
+            <div class="product-image">
+              <img src="img/t_product_540_high.jpg.png" alt="product" />
             </div>
-            <div class="product">
-                <div class="product-header">
-                    <div class="product-image">
-                        <img src="img/t_product_540_high.jpg.png" alt="product">
-                    </div>
-                    <button class="btn">
-                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
-                    </button>
-                    <span class="product-badge">Eksklyuziv</span>
-                </div>
-                <div class="product-body">
-                    <div class="product-info">
-                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
-                        <div class="product-rating">
-                            <img src="img/icon/Vector.svg" alt="star">
-                            <span>4.9 (4092 sharsh)</span>
-                        </div>
-                        <b class="product-monthly">1 560 so'm/oyiga</b>
-                    </div>
-                    <div class="product-footer">
-                        <div class="product-price">
-                            <span class="old-price">15 000 so'm</span>
-                            <b class="new-price">13 000 so'm</b>
-                        </div>
-                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
-                    </div>
-                </div>
+            <button class="btn">
+              <img class="product-fav" src="img/icon/SVG.svg" alt="heart" />
+            </button>
+            <span class="product-badge">Eksklyuziv</span>
+          </div>
+          <div class="product-body">
+            <div class="product-info">
+              <p class="product-title">
+                Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan,
+                90…
+              </p>
+              <div class="product-rating">
+                <img src="img/icon/Vector.svg" alt="star" />
+                <span>4.9 (4092 sharsh)</span>
+              </div>
+              <b class="product-monthly">1 560 so'm/oyiga</b>
             </div>
-            <div class="product">
-                <div class="product-header">
-                    <div class="product-image">
-                        <img src="img/t_product_540_high.jpg.png" alt="product">
-                    </div>
-                    <button class="btn">
-                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
-                    </button>
-                    <span class="product-badge">Eksklyuziv</span>
-                </div>
-                <div class="product-body">
-                    <div class="product-info">
-                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
-                        <div class="product-rating">
-                            <img src="img/icon/Vector.svg" alt="star">
-                            <span>4.9 (4092 sharsh)</span>
-                        </div>
-                        <b class="product-monthly">1 560 so'm/oyiga</b>
-                    </div>
-                    <div class="product-footer">
-                        <div class="product-price">
-                            <span class="old-price">15 000 so'm</span>
-                            <b class="new-price">13 000 so'm</b>
-                        </div>
-                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
-                    </div>
-                </div>
+            <div class="product-footer">
+              <div class="product-price">
+                <span class="old-price">15 000 so'm</span>
+                <b class="new-price">13 000 so'm</b>
+              </div>
+              <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop" />
             </div>
-            <div class="product">
-                <div class="product-header">
-                    <div class="product-image">
-                        <img src="img/t_product_540_high.jpg.png" alt="product">
-                    </div>
-                    <button class="btn">
-                        <img class="product-fav" src="img/icon/SVG.svg" alt="heart">
-                    </button>
-                    <span class="product-badge">Eksklyuziv</span>
-                </div>
-                <div class="product-body">
-                    <div class="product-info">
-                        <p class="product-title">Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan, 90…</p>
-                        <div class="product-rating">
-                            <img src="img/icon/Vector.svg" alt="star">
-                            <span>4.9 (4092 sharsh)</span>
-                        </div>
-                        <b class="product-monthly">1 560 so'm/oyiga</b>
-                    </div>
-                    <div class="product-footer">
-                        <div class="product-price">
-                            <span class="old-price">15 000 so'm</span>
-                            <b class="new-price">13 000 so'm</b>
-                        </div>
-                        <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop">
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="product">
+          <div class="product-header">
+            <div class="product-image">
+              <img src="img/t_product_540_high.jpg.png" alt="product" />
+            </div>
+            <button class="btn">
+              <img class="product-fav" src="img/icon/SVG.svg" alt="heart" />
+            </button>
+            <span class="product-badge">Eksklyuziv</span>
+          </div>
+          <div class="product-body">
+            <div class="product-info">
+              <p class="product-title">
+                Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan,
+                90…
+              </p>
+              <div class="product-rating">
+                <img src="img/icon/Vector.svg" alt="star" />
+                <span>4.9 (4092 sharsh)</span>
+              </div>
+              <b class="product-monthly">1 560 so'm/oyiga</b>
+            </div>
+            <div class="product-footer">
+              <div class="product-price">
+                <span class="old-price">15 000 so'm</span>
+                <b class="new-price">13 000 so'm</b>
+              </div>
+              <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <div class="product-header">
+            <div class="product-image">
+              <img src="img/t_product_540_high.jpg.png" alt="product" />
+            </div>
+            <button class="btn">
+              <img class="product-fav" src="img/icon/SVG.svg" alt="heart" />
+            </button>
+            <span class="product-badge">Eksklyuziv</span>
+          </div>
+          <div class="product-body">
+            <div class="product-info">
+              <p class="product-title">
+                Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan,
+                90…
+              </p>
+              <div class="product-rating">
+                <img src="img/icon/Vector.svg" alt="star" />
+                <span>4.9 (4092 sharsh)</span>
+              </div>
+              <b class="product-monthly">1 560 so'm/oyiga</b>
+            </div>
+            <div class="product-footer">
+              <div class="product-price">
+                <span class="old-price">15 000 so'm</span>
+                <b class="new-price">13 000 so'm</b>
+              </div>
+              <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <div class="product-header">
+            <div class="product-image">
+              <img src="img/t_product_540_high.jpg.png" alt="product" />
+            </div>
+            <button class="btn">
+              <img class="product-fav" src="img/icon/SVG.svg" alt="heart" />
+            </button>
+            <span class="product-badge">Eksklyuziv</span>
+          </div>
+          <div class="product-body">
+            <div class="product-info">
+              <p class="product-title">
+                Kungaboqar yog'i Oila tanlovi, tozalangan va xidsizlantirilgan,
+                90…
+              </p>
+              <div class="product-rating">
+                <img src="img/icon/Vector.svg" alt="star" />
+                <span>4.9 (4092 sharsh)</span>
+              </div>
+              <b class="product-monthly">1 560 so'm/oyiga</b>
+            </div>
+            <div class="product-footer">
+              <div class="product-price">
+                <span class="old-price">15 000 so'm</span>
+                <b class="new-price">13 000 so'm</b>
+              </div>
+              <img class="add-to-cart" src="img/icon/SVG (1).svg" alt="shop" />
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
