--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
         <div class="header-bottom__top">
           <div class="header-bottom__left">
             <div class="logo">
-              <img
-                src="img/uzum_market-logo.png"
-                alt="Uzum Market logotipi"
-                width="247"
-                height="32"
-              />
+              <a href="index.html">
+                <img
+                  src="img/uzum_market-logo.png"
+                  alt="Uzum Market logotipi"
+                  width="247"
+                  height="32"
+              /></a>
             </div>
 
             <div class="search-section">
@@ -65,10 +66,10 @@
                 <input
                   type="text"
                   placeholder="Mahsulotlar va turkumlar izlash"
-                  />
-                  <button class="search-btn">
-                    <img src="img/icon/search.svg" alt="Izlash" />
-                  </button>
+                />
+                <button class="search-btn">
+                  <img src="img/icon/search.svg" alt="Izlash" />
+                </button>
               </div>
             </div>
           </div>
@@ -82,26 +83,34 @@
               <img src="img/icon/hart.svg" alt="" />
               Saralangan
             </a>
-            <a href="#!" class="cart">
+            <a href="savat.html" class="cart">
               <img src="img/icon/shop.svg" alt="" />
               Savat
             </a>
           </div>
         </div>
 
-        <nav class="header-bottom__nav">
-          <a href="#!">Muddatli to‘lov</a>
-          <a href="#!">Elektronika</a>
-          <a href="#!">Maishiy texnika</a>
-          <a href="#!">Kiyim</a>
-          <a href="#!">Poyabzallar</a>
-          <a href="#!">Aksessuarlar</a>
-          <a href="#!">Go‘zallik va parvarish</a>
-          <a href="#!">Salomatlik</a>
-          <a href="#!">Uy-ro‘zg‘or buyumlari</a>
-          <a href="#!">Qurilish va ta’mirlash</a>
-          <a href="#!">Yana</a>
-        </nav>
+        <div class="header-bottom__nav">
+          <div class="muddatli">
+            <img src="img/icon/6-burchak.svg" alt="" />
+            <a href="#!">Muddatli to‘lov</a>
+          </div>
+          <nav class="malumotlar">
+            <a href="#!">Elektronika</a>
+            <a href="#!">Maishiy texnika</a>
+            <a href="#!">Kiyim</a>
+            <a href="#!">Poyabzallar</a>
+            <a href="#!">Aksessuarlar</a>
+            <a href="#!">Go‘zallik va parvarish</a>
+            <a href="#!">Salomatlik</a>
+            <a href="#!">Uy-ro‘zg‘or buyumlari</a>
+            <a href="#!">Qurilish va ta’mirlash</a>
+          </nav>
+          <div class="yana">
+            <a href="#!">Yana</a>
+            <img src="img/icon/bottom-arrow.svg" alt="" />
+          </div>
+        </div>
       </div>
     </header>
 
