--- a/saralangan.html
+++ b/saralangan.html
@@ -113,26 +113,25 @@
       </div>
     </header>
 
-    
-    <section class="empty-cart">
-      <div class="rasm-cat">
-        <img
-          src="img/cat-product.png"
-          alt="Bo'sh savat rasmi"
-          class="empty-cart__image"
-        />
-      </div>
-      <h3 class="empty-cart__title">Savatingiz hozircha bo‘sh</h3>
-      <div class="empty-cart__text">
-        <span>
-          Bosh sahifadan boshlang — kerakli tovarni qidiruv orqali topishingiz
-          yoki to‘plamlarni ko‘rishingiz mumkin
+    <div class="favorite-card">
+      <img
+        class="favorite-card__icon"
+        src="img/saralangan_heart.png"
+        alt="Saralanganlar"
+      />
+      <div class="favorite-card__title">Sizga yoqqanini qoʻshing</div>
+      <div class="favorite-card__description">
+        <span class="favorite-card__note">
+          Mahsulotdagi ♡ belgisini bosing. Akkauntga kiring va barcha
+          saralanganlar saqlanib qoladi
         </span>
       </div>
-      <div class="empty-cart__button">
-        <button class="btn btn-primary">Bosh sahifa</button>
+      <div class="favorite-card__actions">
+        <button class="favorite-card__btn" type="button">
+          Akkauntga kirish
+        </button>
       </div>
-    </section>
+    </div>
 
     <!-- MODAL -->
     <div class="modal" id="loginModal">
