--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Uzum Market</title>
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="font/transfonter.org-20250924-085357/stylesheet.css"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -114,7 +118,55 @@
       </div>
     </header>
 
+    <section class="container">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/main_page_banner.jpg.png" alt="swiper" />
+          </div>
+        </div>
+
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-next">
+          <img class="img-next" src="img/icon/right-arrow.svg" alt="" />
+        </div>
+        <div class="swiper-button-prev">
+          <img src="img/icon/left-arrow.svg" alt="" />
+        </div>
+      </div>
+    </section>
+
     <section class="product-section">
+      <header class="product-name">
+        <div class="info">
+          <h1 class="title-h1">Arzon narxlar</h1>
+          <img class="info-arrow" src="img/icon/right-arrow.svg" alt="" />
+        </div>
+      </header>
       <div id="product-card">
         <div class="product">
           <div class="product-header">
@@ -243,6 +295,82 @@
       </div>
     </section>
 
+    <footer class="footer container">
+      <div class="footer__top">
+        <div class="footer__links">
+          <div class="footer__column">
+            <b class="footer__title">Biz haqimizda</b>
+            <span class="footer__item">Topshirish punktlari</span>
+            <span class="footer__item">Vakansiyalar</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Foydalanuvchilarga</b>
+            <span class="footer__item">Biz bilan bogʻlanish</span>
+            <span class="footer__item">Savol-Javob</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Tadbirkorlarga</b>
+            <span class="footer__item">Uzumda soting</span>
+            <span class="footer__item">Sotuvchi kabinetiga kirish</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Ilovani yuklab olish</b>
+            <div class="footer__apps">
+              <a href="#!" class="footer__app-link AppStore">AppStore</a>
+              <a href="#!" class="footer__app-link">
+                <img
+                  src="img/play-market.svg"
+                  alt="Play Market"
+                  class="footer__app-img"
+                />
+                Play Market
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__socials">
+          <b class="footer__title">Uzum ijtimoiy tarmoqlarda</b>
+          <div class="footer__icons">
+            <img
+              src="img/icon/intagram.svg"
+              alt="Instagram"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/telegam.svg"
+              alt="Telegram"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/youtube.svg"
+              alt="YouTube"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/facebook.svg"
+              alt="Facebook"
+              class="footer__icon"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <div class="footer__policies">
+          <a href="#!" class="footer__policy-link">Maxfiylik kelishuvi</a>
+          <a href="#!" class="footer__policy-link">Foydalanuvchi kelishuvi</a>
+        </div>
+        <span class="footer__copy">
+          «2024© XK MCHJ «UZUM MARKET». STIR 309376127. Barcha huquqlar
+          himoyalangan»
+        </span>
+      </div>
+    </footer>
+
     <!-- MODAL !!! -->
     <div class="modal" id="loginModal">
       <div class="modal__content">
@@ -271,6 +399,8 @@
       </div>
     </div>
 
+    <!-- js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
