--- a/saralangan.html
+++ b/saralangan.html
@@ -36,7 +36,7 @@
               <a href="#!" class="lang-flag">
                 <img src="img/icon/flag.svg" alt="Bayroq" />
               </a>
-              <p class="lang-text">Oʻzbekcha</p>
+              <a href="#!" class="lang-text">Oʻzbekcha</a>
             </div>
           </div>
         </div>
@@ -132,6 +132,88 @@
         </button>
       </div>
     </div>
+
+    <footer class="footer container">
+      <div class="footer__top">
+        <div class="footer__links">
+          <div class="footer__column">
+            <b class="footer__title">Biz haqimizda</b>
+            <span class="footer__item">Topshirish punktlari</span>
+            <span class="footer__item">Vakansiyalar</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Foydalanuvchilarga</b>
+            <span class="footer__item">Biz bilan bogʻlanish</span>
+            <span class="footer__item">Savol-Javob</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Tadbirkorlarga</b>
+            <span class="footer__item">Uzumda soting</span>
+            <span class="footer__item">Sotuvchi kabinetiga kirish</span>
+          </div>
+
+          <div class="footer__column">
+            <b class="footer__title">Ilovani yuklab olish</b>
+            <div class="footer__apps">
+              <a href="#!" class="footer__app-link AppStore">
+                <img
+                  class="footer__app-img Apple-Logo"
+                  src="img/Apple-Logo.png"
+                  alt=""
+                />AppStore
+              </a>
+              <a href="#!" class="footer__app-link">
+                <img
+                  src="img/play-market.svg"
+                  alt="Play Market"
+                  class="footer__app-img"
+                />
+                Play Market
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__socials">
+          <b class="footer__title">Uzum ijtimoiy tarmoqlarda</b>
+          <div class="footer__icons">
+            <img
+              src="img/icon/intagram.svg"
+              alt="Instagram"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/telegam.svg"
+              alt="Telegram"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/youtube.svg"
+              alt="YouTube"
+              class="footer__icon"
+            />
+            <img
+              src="img/icon/facebook.svg"
+              alt="Facebook"
+              class="footer__icon"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <div class="footer__policies">
+          <a href="#!" class="footer__policy-link">Maxfiylik kelishuvi</a>
+          <a href="#!" class="footer__policy-link">Foydalanuvchi kelishuvi</a>
+        </div>
+        <span class="footer__copy">
+          «2024© XK MCHJ «UZUM MARKET». STIR 309376127. Barcha huquqlar
+          himoyalangan»
+        </span>
+      </div>
+    </footer>
 
     <!-- MODAL -->
     <div class="modal" id="loginModal">
